--- a/Docs/Sidebar/css/API List v2.0 item/Topic.css
+++ b/Docs/Sidebar/css/API List v2.0 item/Topic.css
@@ -41,7 +41,8 @@
 .col-left ul li ul li{ 
     margin-top: 24px;
 }
-.col-left ul li ul li a{  
+
+.col-left ul li ul li a{ 
     height: 19px;
     width: 162px;
     font-family: Avenir;
@@ -53,19 +54,34 @@
     color: #333333; 
     list-style: none;
 }
-
+.Topics ul li{
+    margin-top: 1em;
+    padding-bottom: 1em;
+}
+.Topics ul li a{ 
+    height: 19px;
+    width: 162px;
+    font-family: Avenir;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    text-decoration: none;
+    color: #333333; 
+    list-style: none;
+    margin-left: 3em;
+}
 .col-left ul li a:hover,
 .col-left ul li a.active a{
     color:deepskyblue;
 }
 
-
-
 .col-right{
-    height: 535px;
+    height: 531px;
     width: 742px;
     border-radius: 20px;
     margin-top: 100px;
+    z-index: 99;
 }
 .col-right ul h1{
     height: 40px;
@@ -76,26 +92,25 @@
     text-decoration: none;
     line-height: 33px;
     color: black;
-    /*margin-left: 20px;*/
-    
+    list-style: none;
 }
-.col-right ul li{
+.item ul{
+    list-style: none;
+    margin-bottom: 1em;
+}
+.item ul li{
+    margin-bottom: 1em;
+}
+.item ul li a{
     text-decoration: none;
-    margin-top: 25px;
-    list-style: inside;
+    padding-top: 1em;
+    margin-bottom: 1em;
+
 }
-.col-right ul li a{  
-    height: 19px;
-    width: 162px;
-    font-family: Avenir;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 19px;
-    color: #333333; 
+
+
+.col-right ul p{
     text-decoration: none;
-}
-.col-right ul li a:hover,
-.col-right ul li a.active a{
-    color:deepskyblue;
+    text-align: justify;
+    line-height: 33px;
 }
