--- a/Docs/Sidebar/css/API List v2.0.css
+++ b/Docs/Sidebar/css/API List v2.0.css
@@ -12,6 +12,7 @@
     display: grid;
     width: 1440px;
 }
+
 .col-left{
     background: #FFFFFF;
     border-radius: 20px;
@@ -41,7 +42,8 @@
 .col-left ul li ul li{ 
     margin-top: 24px;
 }
-.col-left ul li ul li a{  
+
+.col-left ul li ul li a{ 
     height: 19px;
     width: 162px;
     font-family: Avenir;
@@ -52,6 +54,24 @@
     text-decoration: none;
     color: #333333; 
     list-style: none;
+    
+}
+.Topics ul li{
+    margin-top: 1em;
+    padding-bottom: 1em;
+}
+.Topics ul li a{ 
+    height: 19px;
+    width: 162px;
+    font-family: Avenir;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    text-decoration: none;
+    color: #333333; 
+    list-style: none;
+    margin-left: 3em;
 }
 .col-left ul li a:hover,
 .col-left ul li a.active a{
@@ -66,7 +86,6 @@
     border-radius: 20px;
     margin-top: 100px;
     z-index: 99;
-    
 }
 .col-right ul h1{
     height: 40px;
@@ -78,13 +97,37 @@
     line-height: 33px;
     color: black;
     list-style: none;
+    margin-bottom: 1em;
+}
+.item ul{
+    list-style: none;
+    margin-bottom: 1em;
+}
+.item ul li{
+    text-decoration: none;
+    list-style: none;
+    margin-bottom: 1em;
+}
+.item ul li a{
+    text-decoration: none;
+    
+    height: 19px;
+    width: 162px;
+    font-family: Avenir;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    text-decoration: none;
+    color: #333333; 
+    list-style: none;
+    margin-top: 1em;
 }
 .col-right ul p{
     text-decoration: none;
     text-align: justify;
     line-height: 33px;
 }
-
 .col-right ul li a:hover,
 .col-right ul li a.active a{
     color:deepskyblue;
