--- a/Home/Body/sectionarticle.css
+++ b/Home/Body/sectionarticle.css
@@ -72,13 +72,13 @@
   margin-left: 10em;
   margin-top: 9em;
 }
-.article-center img{
+.article-center i{
   float: left;
-  height: 90px;
-  width: 80px;
-  margin-left: 30px;
+  height: 50px;
+  width: 50px;
+  margin-left: 50px;
   margin-right: 24px;
-  margin-top: 40px;
+  margin-top: 44px;
 }
 .article-center h1{
   float: left;
@@ -125,11 +125,11 @@
   border-radius: 20px;
   margin-top: 9em;
 }
-.article-right img{
+.article-right i{
   float: left;
-  height: 80px;
-  width: 80px;
-  margin-left: 30px;
+  height: 50px;
+  width: 50px;
+  margin-left: 50px;
   margin-right: 24px;
   margin-top: 44px;
 }
