--- a/Docs/Body/docsbody.css
+++ b/Docs/Body/docsbody.css
@@ -234,6 +234,23 @@
   margin-left: 10px;
 }
 
+table {
+  border-collapse: collapse;
+  margin-left: 20px;
+}
+table,
+th,
+td {
+  border: 1px solid black;
+}
+th,
+td {
+  padding: 15px;
+}
+th {
+  text-align: left;
+}
+
 .col-right1 {
   height: 45px;
   width: 85%;
