--- a/Docs/Sidebar/API List v2.0/APIList1-Topic.css
+++ b/Docs/Sidebar/API List v2.0/APIList1-Topic.css
@@ -34,6 +34,19 @@
 nav ul{
   background: white;
   list-style: none;
+  padding-left: 2em;
+}
+
+nav ul a{
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  text-decoration: none;
+  display: block;
+  position: relative;
+  color: #333333;
+  border-left: 2px solid transparent;
 }
 nav ul li{
   padding-bottom: .5em;
@@ -51,7 +64,7 @@ nav ul li a{
   padding-left: 2em;
   margin-bottom: .5em;
 }
-nav ul li a:hover{
+nav ul a:hover{
   color:deepskyblue;
   background: white;
 }
@@ -70,7 +83,7 @@ nav ul ul li a:hover{
   color:deepskyblue!important;
   background: white!important;
 }
-nav ul li a span{
+nav ul a span{
   position: absolute;
   top: 25%;
   right: 20px;
@@ -78,37 +91,6 @@ nav ul li a span{
   transition: transform 0.4s;
   font-size: 14px;
 }
-nav ul li a span.rotate{
+nav ul a span.rotate{
   transform: translateY(-50%) rotate(-180deg);
-}
-
-nav ul .API-L.show{
-  display: block;
-}
-nav ul .API-S-D.show{
-  display: block;
-}
-nav ul .C-G.show{
-  display: block;
-}
-nav ul .LMSv1-I-D.show{
-  display: block;
-}
-nav ul .LMS-U-A-R.show{
-  display: block;
-}
-nav ul .LMSv2-I-D.show{
-  display: block;
-}
-nav ul .LMSv2-U-A-R.show{
-  display: block;
-}
-nav ul .WebXR.show{
-  display: block;
-}
-nav ul .XR-A-I-G.show{
-  display: block;
-}
-nav ul .XR-A-U-M.show{
-  display: block;
 }
