--- a/Docs/Sidebar/Docs-caret-down.css
+++ b/Docs/Sidebar/Docs-caret-down.css
@@ -35,8 +35,9 @@ nav ul{
   background: white;
   list-style: none;
 }
+
 nav ul li{
-  padding-bottom: .5em;
+  margin-bottom: 1em;
 }
 nav ul li a{
   font-family: Avenir;
@@ -49,7 +50,7 @@ nav ul li a{
   color: #333333;
   border-left: 2px solid transparent;
   padding-left: 2.3em;
-  margin-bottom: .5em;
+  margin-bottom: 1em;
 }
 nav ul li a:hover{
   color:deepskyblue;
