--- a/Docs/Body/docsbody.css
+++ b/Docs/Body/docsbody.css
@@ -144,9 +144,9 @@
   list-style: none;
   margin-left: 20px;
 }
-.col-right ul li {
+.col-right ul ul li {
   text-decoration: none;
-  margin-top: 15px;
+  margin-top: .8em;
   margin-left: 20px;
   list-style: inside;
 }
