--- a/Docs/Sidebar/LMS v1.0 Installation and Docs/LMS v1.0 Installation and Docs.css
+++ b/Docs/Sidebar/LMS v1.0 Installation and Docs/LMS v1.0 Installation and Docs.css
@@ -55,20 +55,20 @@ nav ul li{
   margin-top: 1em;
   margin-bottom: 1em;
 }
-
-.caret-list li a{
-  font-family: Avenir;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  text-decoration: none;
-  display: block;
-  position: relative;
-  color: #333333;
-  border-left: 2px solid transparent;
-  margin-bottom: .5em;
-  padding-left: 3em;
+.caretdown1{
+  margin-left: 3em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
+.caretdown2{
+  margin-left: 5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+nav .installation-caretdown li{
+  padding-left: 1em;
+}
+
 nav ul a:hover{
   color:deepskyblue;
   background: white;
@@ -90,12 +90,11 @@ nav ul ul li a:hover{
 }
 nav ul a span{
   position: absolute;
-  top: 25%;
+  top: 50%;
   right: 20px;
   transform: translateY(-50%);
   transition: transform 0.4s;
-  font-size: 14px;
-}
+  font-size: 14px;}
 nav ul a span.rotate{
   transform: translateY(-50%) rotate(-180deg);
 }
