--- a/Docs/Sidebar/XR App Installation Guide/XR App Installation Guide.css
+++ b/Docs/Sidebar/XR App Installation Guide/XR App Installation Guide.css
@@ -84,12 +84,11 @@ nav ul ul li a:hover{
 }
 nav ul a span{
   position: absolute;
-  top: 25%;
+  top: 50%;
   right: 20px;
   transform: translateY(-50%);
   transition: transform 0.4s;
-  font-size: 14px;
-}
+  font-size: 14px;}
 nav ul a span.rotate{
   transform: translateY(-50%) rotate(-180deg);
 }
