--- a/Docs/Body/docsbody.css
+++ b/Docs/Body/docsbody.css
@@ -27,18 +27,19 @@
 .col-right {
   height: 535px;
   width: 842px;
-  background: #ffffff;
   border-radius: 20px;
   margin-top: 100px;
+  background: #ffffff;
   border: 1px solid #f2f2f2;
-  box-sizing: border-box;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
-  overflow-y: auto;
+  box-sizing: border-box;
+  overflow-y: scroll;
 }
 .col-right h1 {
   height: 40px;
   font-family: Avenir;
   font-style: normal;
+  font-weight: 100;
   font-size: 42px;
   text-decoration: none;
   line-height: 33px;
@@ -144,9 +145,9 @@
   list-style: none;
   margin-left: 20px;
 }
-.col-right ul ul li {
+.col-right ul li {
   text-decoration: none;
-  margin-top: 0.8em;
+  margin-top: 1em;
   margin-left: 20px;
   list-style: inside;
 }
@@ -166,12 +167,12 @@
 .col-right ul li a.active a {
   color: deepskyblue;
 }
+
 .col-right img {
   width: 100%;
   height: auto;
   margin-left: 10px;
 }
-
 table {
   border-collapse: collapse;
   margin-left: 20px;
@@ -188,7 +189,6 @@ td {
 th {
   text-align: left;
 }
-
 .col-right1 {
   height: 45px;
   width: 85%;
@@ -206,18 +206,15 @@ th {
   line-height: 33px;
   color: #bfc7d5;
   list-style: none;
-  margin-left: 100px;
   margin-left: 10px;
 }
-
 .col-right2 {
   height: 45px;
   width: 85%;
   background: #ffffff;
   box-sizing: border-box;
-  margin-left: 20px;
+  margin-left: 10px;
 }
-
 .col-right2 p {
   height: 20px;
   font-family: Avenir;
@@ -231,7 +228,7 @@ th {
 }
 
 .col-right3 {
-  height: 350px;
+  height: 320px;
   width: 85%;
   background: rgb(41, 45, 62);
   box-sizing: border-box;
@@ -258,4 +255,212 @@ th {
   line-height: 33px;
   color: #bfc7d5;
   margin-left: 20px;
+}
+
+.col-right3 h6 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 60px;
+}
+
+.col-right3 h7 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 120px;
+}
+
+.col-right4 {
+  height: 80px;
+  width: 85%;
+  background: rgb(41, 45, 62);
+  box-sizing: border-box;
+  margin-left: 20px;
+}
+
+.col-right4 p {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 20px;
+}
+
+.col-right4 h5 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 80px;
+}
+
+.col-right5 {
+  height: 95px;
+  width: 85%;
+  background: rgb(41, 45, 62);
+  box-sizing: border-box;
+  margin-left: 20px;
+}
+
+.col-right5 p {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 80px;
+}
+
+.col-right5 h5 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 20px;
+}
+
+.col-right5 h6 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 60px;
+}
+
+.col-right5 h7 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 120px;
+}
+
+.col-right6 {
+  height: 280px;
+  width: 85%;
+  background: rgb(41, 45, 62);
+  box-sizing: border-box;
+  margin-left: 20px;
+}
+
+.col-right6 p {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 80px;
+}
+
+.col-right6 h5 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 20px;
+}
+
+.col-right6 h6 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 60px;
+}
+
+.col-right6 h7 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 120px;
+}
+
+.col-right7 {
+  height: 280px;
+  width: 85%;
+  background: rgb(41, 45, 62);
+  box-sizing: border-box;
+  margin-left: 20px;
+}
+
+.col-right7 p {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 80px;
+}
+
+.col-right7 h5 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 20px;
+}
+
+.col-right7 h6 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 60px;
+}
+
+.col-right7 h7 {
+  height: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 33px;
+  color: #bfc7d5;
+  margin-left: 120px;
 }
