--- a/Docs/Sidebar/Docs-caret-down.css
+++ b/Docs/Sidebar/Docs-caret-down.css
@@ -31,15 +31,15 @@
   text-align: left;
   margin-left: 15px;
 }
-nav ul{
+.sidebar ul{
   background: white;
   list-style: none;
 }
 
-nav ul li{
-  margin-bottom: .5em;
+.sidebar ul li{
+  margin-bottom: 1.1em;
 }
-nav ul li a{
+.sidebar ul li a{
   font-family: Avenir;
   font-style: normal;
   font-weight: normal;
@@ -52,27 +52,27 @@ nav ul li a{
   padding-left: 2.3em;
   margin-bottom: 1em;
 }
-nav ul li a:hover{
+.sidebar ul li a:hover{
   color:deepskyblue;
   background: white;
 
 }
-nav ul ul{
+.sidebar ul ul{
   position: static;
   display: none;
 }
-nav ul ul li{
+.sidebar ul ul li{
   border-top: none;
 }
-nav ul ul li a{  
+.sidebar ul ul li a{  
   color: #333333;
   padding-left: 4em;
 }
-nav ul ul li a:hover{
+.sidebar ul ul li a:hover{
   color:deepskyblue!important;
   background: white!important;
 }
-nav ul li a span{
+.sidebar ul li a span{
   position: absolute;
   top: 50%;
   right: 20px;
@@ -80,7 +80,7 @@ nav ul li a span{
   transition: transform 0.4s;
   font-size: 14px;
 }
-nav ul li a span.rotate{
+.sidebar ul li a span.rotate{
   transform: translateY(-50%) rotate(-180deg);
 }
 /*Docs*/
