--- a/Docs/Sidebar/WebXR v1.0 App Usage Manual/WebXR v1.0 App Usage Manual.css
+++ b/Docs/Sidebar/WebXR v1.0 App Usage Manual/WebXR v1.0 App Usage Manual.css
@@ -53,21 +53,12 @@ nav ul li{
 .caretdown{
   margin-left: 1em;
   margin-top: 1em;
-  margin-bottom: 1em;
 }
-
-.caret-list li a{
-  font-family: Avenir;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  text-decoration: none;
-  display: block;
-  position: relative;
-  color: #333333;
-  border-left: 2px solid transparent;
+.caretdown li{
   margin-bottom: .5em;
-  padding-left: 3em;
+}
+nav .installation-caretdown li{
+  padding-left: 1em;
 }
 nav ul a:hover{
   color:deepskyblue;
@@ -91,7 +82,7 @@ nav ul ul li a:hover{
 nav ul a span{
   position: absolute;
   top: 50%;
-  right: 20px;
+  right: 10px;
   transform: translateY(-50%);
   transition: transform 0.4s;
   font-size: 14px;}
