--- a/Home/Footer/sectionfooter.css
+++ b/Home/Footer/sectionfooter.css
@@ -92,6 +92,9 @@ footer {
   color: #616161;
   margin-right: 10px;
 }
+.footer-center a:hover {
+  color: deepskyblue;
+}
 .footer ul {
   list-style: none;
   padding-left: 0;
